# AMPLIFY

./: .gitignore  LICENSE  README.md  pyproject.toml
conf/: accelerate_cpu.yaml  config.yaml
conf/dataset/: uniref100+.yaml  uniref50.yaml
conf/model/: 15B.yaml
conf/tokenizer/: amplify_tokenizer.yaml
conf/trainer/: base.yaml
data-pipeline/: README.md  bulk_download.sh  oas_file_parser.py
docs/source/: amplify.config.rst  amplify.dataset.rst  amplify.loss.rst  amplify.metric.rst  amplify.model.rst  amplify.optimizer.rst  amplify.rst  amplify.scheduler.rst  amplify.tokenizer.rst  amplify.trainer.rst  conf.py  index.rst  installation.rst  usage.rst
examples/: attribution.ipynb  contact_prediction.ipynb  efficiency.ipynb  projection_proteins.ipynb  projection_residues.ipynb  pseudo_ppl.ipynb  utils.py
finetune/: .gitignore  README.md  constants.py  downstreamer.py  main.py  metric.py  model.py  protein_dataset.py  trainer.py
finetune/config/: config.yaml  task.yaml
finetune/slurm/: AMPLIFY_TEST.sh  Ablation1.sh  Ablation2.sh  Ablation3.sh  Ablation3r.sh  Ablation4.sh  Ablation4r.sh  ESM2_O_TEST.sh  ESM2_TEST.sh  Our.sh  Reference.sh
framework-integrations/sagemaker/: README.md
scripts/: fasta_to_csv.py  huggingface_esm.py  pretrain.py  safetensors_to_pt.py
src/amplify/: __init__.py
tests/: easy_data.py  fixtures.py  produce-reference-model.py  test_api.py  test_config.py  test_embeddings.py  test_model.py  test_strings.py
tests/example-data/: big-easy-holdout.csv  big-easy-train.csv  big-easy-val.csv  easy-out-of-sample.csv  easy-task-train.csv  (+6 more)
(+78 files in other folders)
